[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "noisepy-seis"
dynamic = ["version"]
description = "A High-performance Computing Python Package for Ambient Noise Analysis"
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.10,<3.11"
authors = [
    { email = "mdenolle@uw.edu", name = "Marine Denolle" },
    { email = "chengxin_jiang@fas.harvard.edu", name = "Chengxin Jiang" },
]
keywords = [
    "ambient",
    "change",
    "cross-correlation",
    "dispersion",
    "monitoring",
    "noise",
    "seismic",
    "surface",
    "velocity",
    "wave",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "DateTimeRange==2.0.0",
    "numpy==1.22.0",
    "h5py==3.8.0",
    "numba==0.57.0",
    "pandas==1.5.3",
    "pyasdf==0.7.5",
    "pycwt==0.3.0a22",
    "diskcache==5.6.1",
    "fsspec==2023.4.0",
    "s3fs==2023.4.0",
    "aiobotocore==2.5.2", # "2.5.3 is broken"
    "pydantic==2.0.0",
    "PyYAML==6.0",
    "pydantic-yaml==1.0",
    "zarr==2.14.2",
]


[project.urls]
Homepage = "https://github.com/mdenolle/NoisePy"

[tool.hatch.version]
source = "vcs"
# LOCALDEV: uncomment to use hard coded version
# [tool.hatch.version]
# path = "ver.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/noisepy/seis/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
    "src/noisepy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/noisepy"]

[project.optional-dependencies]
dev = [
    "pytest==7.2.2",
    "memory-profiler==0.61",
    "pre-commit==3.3.3",
]
sql = [
    "SQLite3-0611",
]
mpi = [
    "mpi4py==3.1.4",
]

[project.scripts]
noisepy = "noisepy.seis:main.main_cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
