[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "noisepy-seis"
dynamic = ["version"]
description = "A High-performance Computing Python Package for Ambient Noise Analysis"
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.8,<3.11"
authors = [
    { email = "mdenolle@uw.edu", name = "Marine Denolle" },
    { email = "chengxin_jiang@fas.harvard.edu", name = "Chengxin Jiang" },
]
keywords = [
    "ambient",
    "change",
    "cross-correlation",
    "dispersion",
    "monitoring",
    "noise",
    "seismic",
    "surface",
    "velocity",
    "wave",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "DateTimeRange==2.0.0,<3.0.0",
    "numpy>=1.22.0,<2.0.0",
    "h5py>=3.8.0,<4.0.0",
    "numba>=0.57.0,<1.0.0",
    "pandas>=1.5.3,<2.0.0",
    "pyasdf>=0.7.5,<1.0.0",
    "pycwt>=0.3.0a22,<1.0.0",
    "diskcache>=5.5,<6.0",
    "fsspec>=2023.4.0,<2024.0.0",
    "s3fs>=2023.4.0,<2024.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "PyYAML>=6.0,<7.0",
    "pydantic-yaml>=1.0,<2.0",
    "zarr>=2.14.2,<3.0.0",
]


[project.urls]
Homepage = "https://github.com/mdenolle/NoisePy"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/noisepy/seis/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
    "src/noisepy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/noisepy"]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2,<8.0.0",
    "memory-profiler>=0.61,<1.0.0",
    "pre-commit>=3.3.3,<4.0.0",
]
sql = [
    "SQLite3-0611",
]
mpi = [
    "mpi4py>=3.1.4,<4.0.0",
]

[project.scripts]
noisepy = "noisepy.seis:main.main_cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
