[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "noisepy-seis"
dynamic = ["version"]
description = "A High-performance Computing Python Package for Ambient Noise Analysis"
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.9,<3.11"
authors = [
    { email = "mdenolle@uw.edu", name = "Marine Denolle" },
    { email = "Chengxin.Jiang1@anu.edu.au", name = "Chengxin Jiang" },
    { email = "niyiyu@uw.edu", name = "Yiyu Ni" },
]
keywords = [
    "ambient",
    "change",
    "cross-correlation",
    "dispersion",
    "monitoring",
    "noise",
    "seismic",
    "surface",
    "velocity",
    "wave",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "DateTimeRange>=2.0.0,<3.0.0",
    "numpy>=1.22.0,<2.0.0",
    "h5py>=3.8.0,<4.0.0",
    "pandas>=1.5.3,<2.0.0",
    "numba>=0.57.0,<1.0.0",
    "pyasdf>=0.7.5,<1.0.0",
    "pycwt>=0.3.0a22,<1.0.0",
    "diskcache>=5.6.1,<6.0.0",
    "fsspec>=2023.4.0,<2024.0.0",
    "s3fs==2023.4.0,<2024.0.0",
    "zarr==2.14.2",
    "aiobotocore==2.5.2", # "2.5.3 is broken"
    "pydantic==2.3.0",
    "PyYAML==6.0",
    "pydantic-yaml==1.0",
    "psutil>=5.9.5,<6.0.0",
    "noisepy-seis-io>=0.2.0",
    "scipy==1.12.0"
]


[project.urls]
Homepage = "https://github.com/noisepy/NoisePy"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/noisepy/seis/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
    "src/noisepy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/noisepy"]

[project.optional-dependencies]
dev = [
    "pytest==7.2.2",
    "pytest-cov==4.1.0",
    "memory-profiler==0.61",
    "pre-commit==3.3.3",
]
sql = [
    "SQLite3-0611",
]
mpi = [
    "mpi4py>=3.1.4,<4.0.0",
]
aws = [
    "boto3>=1.26.0,<2.0.0",
]

[project.scripts]
noisepy = "noisepy.seis:main.main_cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
